# jetlag-hide-and-seek

./: .gitignore  Prototype.pptx  README.md  TODO.md  index.html  publish.ipynb  pyproject.toml  script.js  styles.css
Assets/: get_osm_features.ipynb
assets/: cards.json  cursers.json  players.json  questions.json
backend/: 01_get_map_assets.ipynb  02_push_private_to_public.ipynb
cards/: cards (local copy).xlsx  cards v1.pptx  cards v2.pptx
data/: get_osm_features.ipynb
icons/: icons.pptx
map/: create_map.ipynb  get_map_assets.ipynb  map.html
prototype/: Prototype.pptx  cards.url  index.html  prototype v2.pptx  prototype.pptx  script.js  styles.css
rules/: rules (local copy).html  rules.url
